2013-05-06 Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.c: changed conn_read_packet to accept startmark -1 and ignore
      it in this case.

2013-05-06 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_mysql.c: fixed memory leak.

2013-04-13  Stipe Tolj  <stolj at kannel.org>
    * doc/doxgen/kannel.conf: automated update via 'doxygen -u' to the
      configuration file.
      
2013-04-09 Alexander Malysh <amalysh at kannel.org>
    * gwlib/socket.[ch], test/fakewap.c: patch with
      - parse WSP message and save only the received payload to the output file
      - support for connectionless get/post
      - robustness fixes for Post (resend group segments if no ack), packet loss simulation
      Thanks to Piotr Galecki <piotr_galecki at affirmednetworks.com> for this patch.

2013-03-28  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: revert back, not handling the 'pg_config --libs' output
      as these seem to be the static libs used while linking libpg.a itself,
      and they add unresolved dependancies on various systems. Causes more
      trouble then it help, going back to the old way.
      
2013-03-27  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: fix PostgreSQL detection and libs handling.
    
2013-03-27  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: fix sqlite3 version string extraction.
    
2013-03-27  Stipe Tolj  <stolj at kannel.org>
    * */*: updating the LICENSE preamble to reflect the correct year.

2013-03-12 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_spool.c: fixed compiler warning.

2013-03-09 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed issue with validity value because variable
      was not initialized.

2013-03-07 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed issue with registered_delivery flag if we
      ask only for failed DLR. This fixes #675.

2013-03-07 Alexander Malysh <amalysh at kannel.org>